--- a/src/helloworld/CMakeLists.txt
+++ b/src/helloworld/CMakeLists.txt
@@ -16,11 +16,13 @@ set(node_plugins "")
 find_package(ament_cmake REQUIRED)
 
 find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(rcutils REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(pcl_conversions REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(PCL 1.10 REQUIRED)
+find_package(PCL 1.12 REQUIRED)
 find_package(class_loader REQUIRED)
 
 add_library(talker_class SHARED lib/talker_class.cpp)
